[gd_scene load_steps=5 format=3 uid="uid://ck7geeut0uvi6"]

[ext_resource type="Texture2D" uid="uid://dklkyjer6qq5o" path="res://Assets/inventorywhole.png" id="1_5v3mx"]
[ext_resource type="Script" path="res://inventory_gui.gd" id="1_krxnm"]
[ext_resource type="PackedScene" uid="uid://oh5wtp1yij50" path="res://slot.tscn" id="2_5sms7"]
[ext_resource type="PackedScene" uid="uid://dfv3w4oet47jq" path="res://KeyTooltip.tscn" id="4_fqa3r"]

[node name="InventoryGui" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = 152.0
offset_right = -177.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krxnm")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 214.0
offset_right = 295.0
offset_bottom = 475.0
texture = ExtResource("1_5v3mx")
patch_margin_right = 5

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.38
anchor_right = 0.5
anchor_bottom = 0.484
offset_left = -101.5
offset_top = -20.0
offset_right = 101.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Slot" parent="NinePatchRect/GridContainer" instance=ExtResource("2_5sms7")]
layout_mode = 2

[node name="ButtonBox" parent="NinePatchRect/GridContainer" instance=ExtResource("4_fqa3r")]
position = Vector2(32.5, 72.82)
scale = Vector2(0.5, 0.5)

[node name="Slot2" parent="NinePatchRect/GridContainer" instance=ExtResource("2_5sms7")]
layout_mode = 2

[node name="ButtonBox2" parent="NinePatchRect/GridContainer" instance=ExtResource("4_fqa3r")]
position = Vector2(102.5, 73.82)
scale = Vector2(0.5, 0.5)

[node name="Slot3" parent="NinePatchRect/GridContainer" instance=ExtResource("2_5sms7")]
layout_mode = 2

[node name="ButtonBox3" parent="NinePatchRect/GridContainer" instance=ExtResource("4_fqa3r")]
position = Vector2(170.5, 72.82)
scale = Vector2(0.5, 0.5)

[connection signal="pressed" from="NinePatchRect/GridContainer/Slot2" to="." method="_on_slot_2_pressed"]
